# auth-cookie-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/auth_cookie_audit/: audit.py  cli.py
src/auth_cookie_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
